# python-magic

./: .WORKSPACE.swp  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-python-magic  bazel-testlogs  libmagic.BUILD.bazel  libmagic.WORKSPACE  libmagic.so.1.0.0  setup.py
file-5.31/: Makefile  config.h  config.status  libtool
file-5.31/doc/: Makefile  file.1  libmagic.3  magic.4
file-5.31/magic/: Makefile
file-5.31/python/: Makefile
file-5.31/src/: Makefile  file
file-5.31/src/.deps/: apprentice.Plo  apptype.Plo  ascmagic.Plo  cdf.Plo  cdf_time.Plo  compress.Plo  der.Plo  encoding.Plo  file.Po  fsmagic.Plo  funcs.Plo  is_tar.Plo  magic.Plo  print.Plo  readcdf.Plo  readelf.Plo  softmagic.Plo
file-5.31/src/.libs/: file  libmagic.1.dylib
file-5.31/tests/: Makefile
magic/: BUILD  BUILD.bazel
test/: BUILD  BUILD.bazel  python_magic_test.py
tmp_bazel/: libmagic.so.1.0.0
