load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

package(default_visibility = ["//visibility:public"])

filegroup(
	name = "all_content",
	srcs = glob(["**"]),
)

configure_make(
    name = "libmagic",
    configure_in_place = True,
    lib_source = ":all_content",
    out_shared_libs = ["libmagic.so.1.0.0"],
)
