py_library(
    name = "loader",
    srcs = ["loader.py", "__init__.py"],
    imports = [".."],
    data = select({
        "@platforms//os:linux": ["//:libmagic_linux"],
	"@platforms//os:osx": ["@libmagic_macos//:libmagic"],
    }),
    visibility = ["//visibility:public"],
)

py_library(
    name = "compat",
    srcs = ["compat.py"],
    imports = [".."],
    data = [
        ":loader",
    ],
    visibility = ["//visibility:public"],
)
