py_test(
    name = "libmagic_test",
    srcs = ["libmagic_test.py"],
    deps = [
        "//magic:compat",
    ],
    data = [
        "testdata",
    ]
)

py_test(
    name = "python_magic_test",
    srcs = ["python_magic_test.py"],
    deps = [
        "//magic:compat",
    ],
    data = [
        "testdata",
    ]
)
